--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -128,6 +128,13 @@ volume = {97},
 pages = {2085-2102}
 }
 
+@misc{Brown2013,
+author = {Brown, D. P.},
+year   = {2013},
+title  = {{Tropical Cyclone Report: Hurricane Natricia. National Hurricane Center}},
+note   = {[Available online at www.nhc.noaa.gov]}
+}
+
 @article{BryanRotunno2009,
 author = {Bryan, George H. and Rotunno, Richard},
 title = {{The maximum intensity of tropical cyclones in axisymmetric numerical model simulations}},
@@ -215,6 +222,15 @@ title = {{Observations of temperature in the upper troposphere and lower stratos
 journal = JAS,
 volume = {71},
 pages = {1593-1608}
+}
+
+@article{DeMariaetal2005,
+author = {DeMaria, M. and M. Mainelli and L. K. Shay and J. A. Knaff and J. Kaplan},
+year = {2005},
+title = {{Further improvements to the Statistical Hurricane Intensity Prediction Scheme (SHIPS)}},
+journal = WAF,
+volume = {20},
+pages = {531-543}
 }
 
 @article{DoyleTCI,
@@ -815,6 +831,12 @@ year = {2016},
 title = {{Atmospheric Soundings. University of Wyoming, accessed 6 April 2016}},
 note = {{\url{http://www2.mmm.ucar.edu/people/bryan/cm1/cm1_equations.pdf}}}
 }
+
+@misc{Young2016,
+author={Young, K. and J. Wang and T. Hock and D. Lauritsen and C. Martin}
+title={{Hurricane and Severe Storm Sentinel (GS3) 2012 Global Hawk Dropsonde Project Analysis Summary}},
+year={2016},
+DOI={10.5065/D6BV7DSK}}
 
 @article{YuterHouze1995,
 author = {Yuter, S. E. and R. A. Houze},
