Significantly expand Introduction and add a whole bunch of references.

--- a/abstract.tex
+++ b/abstract.tex
@@ -11,7 +11,7 @@
 \indent \indent Upper-tropospheric thermodynamic processes can play an important role in tropical cyclone (TC) structure and evolution.
 Despite its importance, until recently few in-situ observations were available in the upper levels of TCs.
 Two recent field campaigns - the NASA Hurricane and Severe Storm Sentinel (HS3) and the Office of Naval Research Tropical Cyclone Intensity (TCI) experiment - provided a wealth of high-altitude observations within TCs.
-These observations revealed that the upper-level static stability and tropopause structure can change dramatically with both space and time in TCs.
+These observations revealed that the upper-level static stability and tropopause structure of TCs can change dramatically with both space and time.
 
 The TCI dropsonde dataset collected during the rapid intensification (RI) of Hurricane Patricia (2015) revealed dramatic changes in tropopause height and temperature within the storm's inner core.
 These changes in tropopause structure were accompanied by a systematic decrease in tropopause-layer static stability over the eye.
@@ -26,5 +26,4 @@ These layers were more common in hurricanes than in weaker TCs, as hurricanes we
 HS3 dropsondes deployed within and around TC Nadine (2012) observed two distinct upper-level stability maxima within the storm's cirrus canopy.
 Outside of the cirrus canopy, however, only one stability maximum was present in the upper levels.
 In a large rawinsonde dataset, multiple stability maxima like those observed in Nadine were observed more often within cold cirrus clouds than outside of cirrus.
-It is hypothesized that vertical gradients of radiative heating within cirrus clouds could produce these multiple stability maxima.
-MENTION THAT STABLE LAYER IS STRONGER WITHIN COLD CIRRUS AND THAT IT'S ALSO STRONGER IN HURRICANES THAN IN TD+TS?
+It is hypothesized that vertical gradients of radiative heatin, differential advection within the upper-tropospheric outflow layer, and vertical gradients of turbulence all could contribute to producing these multiple stability maxima.
