--- a/ack.tex
+++ b/ack.tex
@@ -10,7 +10,7 @@
 
 \indent \indent This dissertation is the fulfillment of a childhood dream that would not have come true without the selfless dedication of countless people.
 
-First I would like to thank my advisor, Dr. John Molinari, for his unswerving kindness, humility, and patience over these past six years.  
+First I thank my advisor, Dr. John Molinari, for his unswerving kindness, humility, and patience over these past six years.  
 Former students have described him as a "brilliant scientist and an even better man," an assessment with which I wholeheartedly concur.  
 I could not have asked for a better mentor, and am so grateful for the opportunities he has given to me.
 
