--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -101,6 +101,15 @@ volume = {65},
 pages = {233-240}
 }
 
+@article{Blacketal2007,
+author = {Black, P. G. and Coauthors},
+year = {2007},
+title = {{Air–sea exchange in hurricanes: Synthesis of observations from the Coupled Boundary Layer Air–Sea Transfer experiment}},
+journal = BAMS,
+volume = {88},
+pages = {357-374}
+}
+
 @article{Blacketal2017,
 author = {Black, P. and L. Harrison and M. Beaubien and R. Bluth and R. Woods and A. Penny and R. W. Smith and J. D. Doyle},
 title = {{High definition sounding system (HDSS) for atmospheric profiling}},
@@ -185,7 +194,7 @@ year = {2013},
 title = {On the rapid intensification of Hurricane Wilma (2005). Part II: Convective bursts and the upper-level warm core},
 journal = JAS,
 volume = {70},
-number = {146-162}
+pages = {146-162}
 }
 
 @article{Danielsen1993,
@@ -212,7 +221,7 @@ year = {2016},
 title = {Influence of tropical cyclones on tropospheric ozone: possible implications},
 journal = {{Atmos. Chem. Phys.}},
 volume = {16},
-number = {4837-4847}
+pages = {4837-4847}
 }
 
 @article{Davisetal2014,
@@ -231,6 +240,15 @@ title = {{Further improvements to the Statistical Hurricane Intensity Prediction
 journal = WAF,
 volume = {20},
 pages = {531-543}
+}
+
+@article{Dinhetal2010,
+author = {Dinh, T. P. and D. R. Durran and T. P. Ackerman},
+year = {2010},
+title = {{Maintenance of tropical tropopause layer cirrus}},
+journal = JGR,
+volume = {115},
+number = {D02104}
 }
 
 @article{DoyleTCI,
@@ -277,8 +295,16 @@ title = {{Dramatic inner-core tropopause variability during the rapid intensific
 journal = {Mon. Wea. Rev.},
 year = {2018},
 volume = {146},
-number = {1},
 pages = {119-134}
+}
+
+@article{Durranetal2009,
+author = {Durran, D. R. and T. Dinh and M. Ammerman and T. Ackerman},
+year = {2009},
+title = {{The mesoscale dynamics of thin tropical tropopause cirrus}},
+journal = JAS,
+volume = {66},
+pages = {2859-2873}
 }
 
 @article{EbertHolland1992,
@@ -326,6 +352,24 @@ volume = {142},
 pages = {957-970}
 }
 
+@article{Fovelletal2016,
+author = {Fovell, R. G. and Y. P. Bu and K. L. Corbosiero and W.-W. Tung and Y. Cao and H.-C. Kuo and L.-H. Hsu and H. Su},
+year = {2016},
+title = {{Influence of cloud microphysics and radiation on tropical cyclone structure and motion}},
+journal = METMON,
+volume = {56},
+pages = {11.1-11.27}
+}
+
+@article{Galletal2013,
+author = {Gall, R. and J. Franklin and F. Marks and E. N. Rappaport and F. Toepfer},
+year = {2013},
+title = {The hurricane forecast improvement project},
+journal = BAMS,
+volume = {94},
+pages = {329-343}
+}
+
 @article{Garrettetal2005,
 author = {Garrett, T. J. and B. C. Navarro and C. H. Twohy and E. J. Jensen and D. G. Baumgardner and P. T. Bui and H. Gerber and R. L Herman and A. J. Heymsfield and P. Lawson and P. Minnis and L. Nguyen and M. Poellot and S. K. Pope and F. P. J. Valero and E. M. Weinstock},
 year = {2005},
@@ -359,7 +403,7 @@ year = {2010},
 title = {Multiscale observations of Hurricane Dennis (2005): The effects of hot towers on rapid intensification},
 journal = JAS,
 volume = {67},
-number = {633-653}
+pages = {633-653}
 }
 
 @article{Halversonetal2006,
@@ -398,6 +442,15 @@ volume = {96},
 pages = {617-636}
 }
 
+@article{HighwoodHoskins1998,
+author = {Highwood, E. J. and B. J. Hoskins},
+year = {1998},
+title = {The tropical tropopause},
+journal = QJRMS,
+volume = {124},
+pages = {1579-1604}
+}
+
 @article{HockFranklin1999,
 author = {Hock, T. F. and J. L. Franklin},
 year = {1999},
@@ -407,6 +460,15 @@ volume = {80},
 pages = {407-420}
 }
 
+@article{Hoerlingetal1991,
+author = {Hoerling, M. P. and T. K. Schaack and A. J. Lenzen},
+year = {1991},
+title = {Global objective tropopause analysis},
+journal = MWR,
+volume = {119},
+pages = {1816-1831}
+}
+
 @article{Holtonetal1995,
 author = {Holton, J. R. and P. H. Haynes and M. E. McIntyre and A. R. Douglass and R. B. Hood and L. Pfister},
 year = {1995},
@@ -414,6 +476,14 @@ title = {{Stratosphere-troposphere exchange}},
 journal = {{Rev. Geophys.}},
 volume = {33},
 pages = {403-439}
+}
+
+@book{HoltonHakim,
+author = {Holton, J. R. and G. J. Hakim},
+title = {An Introduction to Dynamic Meteorology},
+year = {2013},
+publisher = {Elsevier Academic Press},
+pages = {532},
 }
 
 @article{Iacono,
@@ -544,7 +614,7 @@ year = {2012},
 title = {Research using high (and higher) resolution radiosonde data},
 journal = {{Eos, Trans. Amer. Geophys. Union}},
 volume = {93},
-number = {337-344}
+pages = {337-344}
 }
 
 @article{Malkus1958,
@@ -625,7 +695,7 @@ year = {1965},
 title = {Ozone and temperature structure in a hurricane},
 journal = {{J. Appl. Meteor.}},
 volume = {4},
-number = {212-216}
+pages = {212-216}
 }
 
 @article{Penn1966,
@@ -635,6 +705,15 @@ title = {{Temperature and ozone variations near tropopause level over Hurricane 
 journal = {{J. Appl. Meteor.}},
 volume = {5},
 pages = {407-410}
+}
+
+@article{PowellAberson2001,
+author = {Powell, M. D. and S. D. Aberson},
+year = {2001},
+title = {{Accuracy of United States tropical cyclone landfall forecasts in the Atlantic basin (1976-2000)}},
+journal = BAMS,
+volume = {82},
+pages = {2749-2767}
 }
 
 @article{Randeletal2007,
@@ -652,7 +731,16 @@ year = {2006},
 title = {Modeling the impact of convective entrainment on the tropical tropopause},
 journal = JAS,
 volume = {63},
-number = {1013-1027}
+pages = {1013-1027}
+}
+
+@article{Rogersetal2006,
+author = {Rogers, R. and S. Aberson and M. Black and P. Black and J. Cione and P. Dodge and J. Dunion and J. Gamache and J. Kaplan and M. Powell and N. Shay and N. Surgi and E. Uhlhorn},
+year = {2006},
+title = {{The Intensity Forecasting Experiment (IFEX): A NOAA multi-year field program for improving tropical cyclone intensity forecasts}},
+journal = BAMS,
+volume = {87},
+pages = {1523-1537}
 }
 
 @article{Rogersetal2017,
@@ -751,7 +839,6 @@ title = {{Explicit Forecasts of Winter Precipitation Using an Improved Bulk Micr
 journal = {Mon. Wea. Rev.},
 year = {2004},
 volume = {132},
-number = {2},
 pages = {519-542}
 }
 
@@ -791,6 +878,15 @@ volume = {71},
 pages = {4333-4348}
 }
 
+@article{Wilcoxetal2011,
+author = {Wilcox, L. J. and B. J. Hoskins and K. P. Shine},
+year = {2011},
+title = {{A global blended tropopause based on ERA data. Part I: Climatology}},
+journal = QJRMS,
+volume = {138},
+pages = {561-575}
+}
+
 @article{Willoughby1979,
 author = {Willoughby, H. E.},
 year = {1979},
@@ -815,7 +911,7 @@ year = {1957},
 title = {{Meteorology---A three-dimensional science.}},
 journal = {{WMO Bull.}},
 volume = {6},
-number = {134-138}
+pages = {134-138}
 }
 
 @misc{WMO1998,
@@ -833,10 +929,19 @@ note = {{\url{http://www2.mmm.ucar.edu/people/bryan/cm1/cm1_equations.pdf}}}
 }
 
 @misc{Young2016,
-author={Young, K. and J. Wang and T. Hock and D. Lauritsen and C. Martin}
+author={Young, K. and J. Wang and T. Hock and D. Lauritsen and C. Martin},
 title={{Hurricane and Severe Storm Sentinel (GS3) 2012 Global Hawk Dropsonde Project Analysis Summary}},
 year={2016},
 DOI={10.5065/D6BV7DSK}}
+
+@article{YuchechenandCanziani,
+author = {Yuchechen, A. E. and P. O. Canziani},
+year = {2017},
+title = {A comparison between thermal tropopauses derived from mandatory and significant levels for the {Indian} subcontinent upper-air network},
+journal = {{Atmos. Sci. Let.}},
+volume = {18},
+pages = {207-214}
+}
 
 @article{YuterHouze1995,
 author = {Yuter, S. E. and R. A. Houze},
