--- a/hs3.tex
+++ b/hs3.tex
@@ -5,6 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
  
 \chapter{The tropopause-layer static stability structure of tropical cyclones as revealed by HS3 dropsondes and a large rawinsonde dataset}
+\label{chapter:hs3}
 \resetfootnote %this command starts footnote numbering with 1 again.
 
 %---------------------------------------------------------------------------------------%
@@ -106,7 +107,7 @@ These distributions provide further evidence for a relationship between the infr
 %FIGURE 1%
 \begin{figure*}[ht]
 \centerline{\includegraphics[width=33pc]{figures/stationmap+stormlocations.png}}
-\caption{(top) Map of the number of rawinsondes deployed within 1000 km of tropical cyclones by station locations. (bottom) The locations of the center positions of (blue stars) tropical depressions, (orange stars) tropical storms, and (red stars) hurricanes at times when rawinsonde observations were collected.}
+\caption{(top) Map of the number of rawinsondes deployed by stations located within 1000 km of tropical cyclone center positions. (bottom) The locations of the center positions of (blue stars) tropical depressions, (orange stars) tropical storms, and (red stars) hurricanes at times when rawinsonde observations were collected.}
 \label{fig:maps}
 \end{figure*}
 
