--- a/modeling.tex
+++ b/modeling.tex
@@ -5,6 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
  
 \chapter{Tropopause evolution in a rapidly intensifying tropical cyclone: A static stability budget analysis in an idealized, axisymmetric framework}
+\label{chapter:modeling}
 \resetfootnote %this command starts footnote numbering with 1 again.
 
 \textbf{Submitted to Journal of the Atmospheric Sciences, in review.}
