--- a/patricia.tex
+++ b/patricia.tex
@@ -5,7 +5,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
  
 \chapter{Dramatic inner-core tropopause variability during the rapid intensification of {Hurricane Patricia} (2015)}
+\label{chapter:patricia}
 \resetfootnote %this command starts footnote numbering with 1 again.
+
+\textbf{Published in Monthly Weather Review:}
+
+\noindent Duran, P., and J. Molinari, 2018: Dramatic inner-core tropopause variability during the rapid intensification of Hurricane Patricia (2015). \textit{Mon. Wea. Rev.}, \textbf{146}, 119–134.
 
 %---------------------------------------------------------------------------------------%
 \section{Introduction}
