--- a/title_info.tex
+++ b/title_info.tex
@@ -3,7 +3,7 @@
 % You should replace the appropriate fields in
 % the following section with your own information.
 
-\thesistitle{\bf The upper-level static stability and tropopause structure of tropical cyclones }
+\thesistitle{\bf The upper-level turbulence, static stability and tropopause structure of tropical cyclones }
 \thesissubtitle{\bf }
 \author{ Patrick Timothy Duran}
 \degreetype{Doctor of Philosophy}
