--- a/turb.tex
+++ b/turb.tex
@@ -5,6 +5,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
  
 \chapter{Upper-tropospheric low Richardson number in tropical cyclones: Sensitivity to cyclone intensity and the diurnal cycle}
+\label{chapter:turb}
 \resetfootnote %this command starts footnote numbering with 1 again.
 
 \textbf{Published in Journal of the Atmospheric Sciences:}
@@ -16,7 +17,7 @@
 \section{Introduction}
 %---------------------------------------------------------------------------------------%
 
-In addition to its importance in the theoretical models of TCs discussed in Section \ref{intro}, turbulence associated with TCs can considerably disrupt aviation traffic.
+In addition to its importance in the theoretical models of TCs discussed in Chapter \ref{intro}, turbulence associated with TCs can considerably disrupt aviation traffic.
 Although severe turbulence is most often observed within 100 km of active convection \citep{Laneetal2012}, widespread turbulence also has been reported in the upper-level outflow of mesoscale convective systems several hundred kilometers away from convection \citep{TrierSharman2009}.
 Possible causes of this turbulence include breaking gravity waves \citep{Laneetal2012} and strong vertical wind shear associated with MCS outflow \citep{Zovko-RajakLane2014}.
 Although turbulence near midlatitude MCSs has been studied extensively, few papers have addressed turbulence near TCs.
